--- a/StudentReportingSystem/pom.xml
+++ b/StudentReportingSystem/pom.xml
@@ -46,6 +46,13 @@
 		    <artifactId>jakarta.json-api</artifactId>
 		    <version>2.1.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
