--- a/StudentReportingSystem/src/main/resources/application.properties
+++ b/StudentReportingSystem/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.elasticsearch.cluster-nodes=localhost:9300
 
 spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
+
+#logging.level.org.springframework=debug
