--- a/StudentReportingSystem/src/main/resources/application.properties
+++ b/StudentReportingSystem/src/main/resources/application.properties
@@ -5,4 +5,13 @@ spring.data.elasticsearch.cluster-nodes=localhost:9300
 spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:masaidb}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
 #logging.level.org.springframework=debug
